add jvm test cases.